--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
    <link rel="stylesheet" href="lightbox.css">
    <script src="js05.js" defer></script>
    <script src="lightbox_data.js" defer></script>
+   <!-- Random -->
 
 </head>
 
